# si_game_python

./: README.md
backend/: .gitignore  1.py  555.json  Makefile  README.md  manage.py  pyproject.toml
backend/app/: container.py
backend/app/adapters/: game.py
backend/app/adapters/storage/: database.py  game.py  package.py
backend/app/adapters/storage/database/: base_model.py  provider.py
backend/app/adapters/storage/models/: __init__.py  games.py  packages.py  players.py  questions.py  rounds.py  topics.py  users.py
backend/app/api/: factory.py  handlers.py
backend/app/api/v1/: factory.py
backend/app/api/v1/routers/: games.py  packages.py  users.py
backend/app/domain/: game.py  package.py  player.py  question.py  round.py  topic.py  user.py
backend/app/models/: game.py
backend/app/services/: exceptions.py  game.py  package.py
backend/app/services/interfaces/: game.py
backend/app/services/schemas/: game.py  member.py  pack.py  package.py  player.py  presenter.py  question.py  round.py  theme.py  topic.py  user.py  viewer.py
backend/app/services/types/: game_status.py
backend/app/settings/: __init__.py  api.py  app.py  database.py  server.py
backend/cli/: __main__.py  migrations.py  start.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 2023_05_06_1933-b15df6bec5ae.py  2023_05_06_2213-e709cb02ee81.py  2023_05_08_1036-504326e6180c.py  2023_05_08_1118-3bba77ba57a5.py  2023_05_08_1140-dba407c1663c.py  2023_05_08_1142-81d2bf64dc3f.py  2023_05_08_1720-115d8e3a7632.py  2023_05_09_1211-ae09eecd4854.py
backend/utils/: constants.py  pyproject.py
backend/utils/settings/: __init__.py  base.py
