[tool.poetry]
name = "si_game"
version = "0.1.0"
description = ""
authors = ["Gurgen Abramyan <gurgen.abramyan.1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.1"
dependency-injector = "4.41.0"
uvicorn = "0.22.0"
python-dotenv = "1.0.0"
SQLAlchemy = "2.0.12"

[tool.poetry.dev-dependencies]
mypy = "1.2.0"
black = "23.3.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
