[tool.poetry]
name = "si_game"
version = "0.1.0"
description = ""
authors = ["Gurgen Abramyan <gurgen.abramyan.1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
dependency-injector = "4.41.0"
uvicorn = "0.22.0"
python-dotenv = "1.0.0"
SQLAlchemy = {extras = ["asyncio"], version = "2.0.12"}
alembic = "1.10.4"
asyncpg = "0.27.0"
pydantic = {extras = ["email"], version = "^1.10.7"}

[tool.poetry.group.dev.dependencies]
mypy = "1.2.0"
black = "23.3.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
