[tool.poetry]
name = "si_game"
version = "0.1.0"
description = ""
authors = ["Gurgen Abramyan <gurgen.abramyan.1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
dependency-injector = "4.41.0"
uvicorn = "0.22.0"
python-dotenv = "1.0.0"
SQLAlchemy = {extras = ["asyncio"], version = "2.0.12"}
alembic = "1.10.4"
asyncpg = "0.27.0"
pydantic = {extras = ["email"], version = "1.10.7"}
websockets = "11.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "1.2.0"
black = "23.3.0"
ruff = "0.0.265"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["ALL"]
ignore = [
    "D213",  # Multi-line docstring summary should start at the second line.
    "D203",  # One blank line required before class docstring.
    "D104",  # Missing docstring in public package.
    "D100",  # Missing docstring in public module.
    "D107",  # Missing docstring in `__init__`.
    "ANN101",  # Missing type annotation for `self` in method.
    "S603",  # `subprocess` call: check for execution of untrusted input.
    "COM812",  # Trailing comma missing.
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # Unused import.
]
"migrations/versions/*.py" = [
    "D103",  # Missing docstring in public function.
    "N999",  # Invalid module name. 
]
"app/services/schemas/*.py" = [
    "D106",  # Missing docstring in public nested class.
]
"app/settings/*.py" = [
    "D106",  # Missing docstring in public nested class.
]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.pylint]
max-args = 10
